syntax = "proto3";

package finam.protobuf.common;

option java_multiple_files = true;

option objc_class_prefix = "FNM";


// Универсальный идентификатор инструмента,
// позволяющий однозначно идентифицировать инструмент одним из следующих способов:
// - по уникальному целочисленному идентификатору;
// - по тикеру и MIC;
// - по Seccode и Secboard;
// - по ISIN и MIC;
// - по bloomberg_symbol;
// - по esignal_symbol;
// - по ric;
// - по SEDOL;
// - по Bloomberg Global ID (BBGID);
// - по Ticker и TransaqMarket.
message SecurityIdentifier {
    message TickerAndMic {
        string ticker = 1;
        string mic = 2;
    }
    message SeccodeAndSecboard {
        string seccode= 1;
        string secboard = 2;
    }
    message IsinAndMic {
        string isin = 1;
        string mic = 2;
    }
    message Consolidated {
        enum Kind {
            UNKNOWN = 0;
            US_MARKET = 1; // Консолидированный инструмент на американском рынке
        }

        Kind kind = 1;
        oneof id_oneof {
            string ticker = 2;
            string isin = 3;
        }
    }
    message TickerAndTransaqMarket {
        string ticker = 1;
        int32  market = 2;  // finam.protobuf.transaq.MarketsMask
    }

    oneof spec {
        int64               security_id      = 1;
        TickerAndMic        ticker_mic       = 2;
        SeccodeAndSecboard  seccode_secboard = 3;
        IsinAndMic          isin_mic         = 4;
        Consolidated        consolidated     = 5;
        string              bloomberg_symbol = 6;
        string              esignal_symbol   = 7;
        string              ric              = 8;
        string              sedol            = 9;
        string              bbgid            = 10;  // Bloomberg Global ID (BBGID)
        TickerAndTransaqMarket ticker_transaqmarket = 11;
    }
}