syntax = "proto3";

package finam.protobuf.common;

option java_multiple_files = true;

option objc_class_prefix = "FNM";

// Представление вещественного числа с фиксированоой точностью (в том числе и целых чисел).
// Общее значение вычисляется следующим образом: num + (frac*10^-scale)
message DecimalValue {
    enum Scale {
        ZERO     = 0;
        DECI     = 1;
        CENTI    = 2;
        MILLI    = 3;
        MILLI10  = 4;
        MILLI100 = 5;
        MICRO    = 6;
        MICRO10  = 7;
        MICRO100 = 8;
        NANO     = 9;
    }

    // Целая часть числа [-2^63, 2^63-1].
    int64 num = 1;

    // Дробная часть числа, должно выполняться условие abs[frac*10^-scale] < 1.
    // Если `num` больше нуля, `frac` должно быть больше или равно нулю.
    // Если `num` рвно нулю, `frac` может быть больше, меньше или равно нулю.
    // Если `num` меньше нуля, `frac` должно быть меньше или равно нулю.
    // Например, -1.75 может быть представлено как `num`=-1, `frac`=-75 и 'scale'=CENTI,
    // а -1.7500 может быть представлено как `num`=-1, `frac`=-7500 и 'scale'=MILLI10,
    int32 frac = 2;

    // Масштаб представления дробной части (кол-во знаков в дробной части).
    Scale scale = 3;
}

message BigDecimalValue {
    // little-endian мантисса без десятичной точки
    bytes num = 1;

    // Масштаб представления дробной части (кол-во знаков в дробной части).
    uint32 scale = 2;
}
